--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "antd": "^4.16.10",
+    "axios": "^0.21.1",
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
@@ -36,6 +37,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
+    "less-loader": "5.0.0",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -142,5 +144,9 @@
         }
       ]
     ]
-  }
+  },
+  "devDependencies": {
+    "less": "^4.1.1"
+  },
+  "proxy":"http://localhost:5000"
 }
